# irmin-statistics

./: dune-project  irmin-statistics.opam
src/: dune  main.ml  statistics.ml  store_hash.ml
